Fix list mutability